--- a/OUTROS/consulta_corte.ipynb
+++ b/OUTROS/consulta_corte.ipynb
@@ -95,14 +95,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>437497</td>\n",
+       "      <td>465097</td>\n",
        "      <td>5</td>\n",
-       "      <td>1064.48</td>\n",
-       "      <td>130.0</td>\n",
-       "      <td>TALCO BARUEL PO 100GR ORIGINAL</td>\n",
-       "      <td>2358.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-2358.0</td>\n",
+       "      <td>704.67</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>BOLINHO BAUDUCCO 40GR CHOC/BAUNILHA</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>-5.0</td>\n",
        "      <td>NaT</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -113,9 +113,9 @@
        "      <td>1875.62</td>\n",
        "      <td>53.0</td>\n",
        "      <td>SUCO NUTRINECTAR PRONTO 200ML UVA</td>\n",
-       "      <td>1981.0</td>\n",
-       "      <td>1723.0</td>\n",
-       "      <td>-258.0</td>\n",
+       "      <td>2912.0</td>\n",
+       "      <td>1551.0</td>\n",
+       "      <td>-1361.0</td>\n",
        "      <td>2025-09-09</td>\n",
        "      <td>Produto na camara-fria</td>\n",
        "    </tr>\n",
@@ -126,9 +126,9 @@
        "      <td>5224.50</td>\n",
        "      <td>90.0</td>\n",
        "      <td>CREME LEITE TIROL 200GR</td>\n",
-       "      <td>237.0</td>\n",
+       "      <td>205.0</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>-225.0</td>\n",
+       "      <td>-193.0</td>\n",
        "      <td>2025-09-10</td>\n",
        "      <td>validade filial</td>\n",
        "    </tr>\n",
@@ -139,9 +139,22 @@
        "      <td>729.22</td>\n",
        "      <td>22.0</td>\n",
        "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
-       "      <td>1944.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>-1924.0</td>\n",
+       "      <td>1614.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1613.0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>464317</td>\n",
+       "      <td>3</td>\n",
+       "      <td>231.34</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>MUCILON 360GR SACHET ARROZ</td>\n",
+       "      <td>1133.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1133.0</td>\n",
        "      <td>NaT</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
@@ -151,22 +164,25 @@
       ],
       "text/plain": [
        "      COD  QTDE_DIAS  TOTAL_CORTE  QTDE_CORTE  \\\n",
-       "0  437497          5      1064.48       130.0   \n",
+       "0  465097          5       704.67        29.0   \n",
        "1  444365          4      1875.62        53.0   \n",
        "2  464141          3      5224.50        90.0   \n",
        "3  471762          3       729.22        22.0   \n",
+       "4  464317          3       231.34         3.0   \n",
        "\n",
        "                               Descrição   Estoque  BLOQUEADO     var  \\\n",
-       "0          TALCO BARUEL PO 100GR ORIGINAL   2358.0        0.0 -2358.0   \n",
-       "1       SUCO NUTRINECTAR PRONTO 200ML UVA   1981.0     1723.0  -258.0   \n",
-       "2                 CREME LEITE TIROL 200GR    237.0       12.0  -225.0   \n",
-       "3  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   1944.0       20.0 -1924.0   \n",
+       "0     BOLINHO BAUDUCCO 40GR CHOC/BAUNILHA     20.0       15.0    -5.0   \n",
+       "1       SUCO NUTRINECTAR PRONTO 200ML UVA   2912.0     1551.0 -1361.0   \n",
+       "2                 CREME LEITE TIROL 200GR    205.0       12.0  -193.0   \n",
+       "3  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   1614.0        1.0 -1613.0   \n",
+       "4              MUCILON 360GR SACHET ARROZ   1133.0        0.0 -1133.0   \n",
        "\n",
        "        DATA                   RETURN  \n",
        "0        NaT                           \n",
        "1 2025-09-09  Produto na camara-fria   \n",
        "2 2025-09-10          validade filial  \n",
-       "3        NaT                           "
+       "3        NaT                           \n",
+       "4        NaT                           "
       ]
      },
      "metadata": {},
@@ -196,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "94e22145",
    "metadata": {},
    "outputs": [
@@ -231,66 +247,30 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>14366</th>\n",
+       "      <th>14527</th>\n",
+       "      <td>2025-09-19</td>\n",
+       "      <td>04:49:00</td>\n",
+       "      <td>464317</td>\n",
+       "      <td>MUCILON 360GR SACHET ARROZ</td>\n",
+       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
+       "      <td>ALEANDRA TRINDADE SOUSA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14477</th>\n",
+       "      <td>2025-09-18</td>\n",
+       "      <td>15:33:00</td>\n",
+       "      <td>464317</td>\n",
+       "      <td>MUCILON 360GR SACHET ARROZ</td>\n",
+       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
+       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14365</th>\n",
        "      <td>2025-09-15</td>\n",
-       "      <td>11:08:00</td>\n",
-       "      <td>471762</td>\n",
-       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
-       "      <td>PRODUTO AVARIADO</td>\n",
-       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14360</th>\n",
-       "      <td>2025-09-13</td>\n",
-       "      <td>04:02:00</td>\n",
-       "      <td>471762</td>\n",
-       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>ALEANDRA TRINDADE SOUSA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14358</th>\n",
-       "      <td>2025-09-13</td>\n",
-       "      <td>00:28:00</td>\n",
-       "      <td>471762</td>\n",
-       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>ALEANDRA TRINDADE SOUSA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14316</th>\n",
-       "      <td>2025-09-12</td>\n",
-       "      <td>16:55:00</td>\n",
-       "      <td>471762</td>\n",
-       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14328</th>\n",
-       "      <td>2025-09-12</td>\n",
-       "      <td>16:13:00</td>\n",
-       "      <td>471762</td>\n",
-       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14320</th>\n",
-       "      <td>2025-09-12</td>\n",
-       "      <td>15:18:00</td>\n",
-       "      <td>471762</td>\n",
-       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14315</th>\n",
-       "      <td>2025-09-12</td>\n",
-       "      <td>14:56:00</td>\n",
-       "      <td>471762</td>\n",
-       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
+       "      <td>15:27:00</td>\n",
+       "      <td>464317</td>\n",
+       "      <td>MUCILON 360GR SACHET ARROZ</td>\n",
+       "      <td>MERCADORIA PROXIMO AO VENCIMENTO</td>\n",
        "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -298,23 +278,15 @@
        "</div>"
       ],
       "text/plain": [
-       "            DATA     HORAS     COD                               DESCRIÇÃO  \\\n",
-       "14366 2025-09-15  11:08:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
-       "14360 2025-09-13  04:02:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
-       "14358 2025-09-13  00:28:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
-       "14316 2025-09-12  16:55:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
-       "14328 2025-09-12  16:13:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
-       "14320 2025-09-12  15:18:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
-       "14315 2025-09-12  14:56:00  471762  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   \n",
+       "            DATA     HORAS     COD                   DESCRIÇÃO  \\\n",
+       "14527 2025-09-19  04:49:00  464317  MUCILON 360GR SACHET ARROZ   \n",
+       "14477 2025-09-18  15:33:00  464317  MUCILON 360GR SACHET ARROZ   \n",
+       "14365 2025-09-15  15:27:00  464317  MUCILON 360GR SACHET ARROZ   \n",
        "\n",
-       "                          MOTIVO                           FUNCIONARIO  \n",
-       "14366           PRODUTO AVARIADO  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
-       "14360  QUANTIDADE INFERIOR DA OS               ALEANDRA TRINDADE SOUSA  \n",
-       "14358  QUANTIDADE INFERIOR DA OS               ALEANDRA TRINDADE SOUSA  \n",
-       "14316  QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
-       "14328  QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
-       "14320  QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
-       "14315  QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  "
+       "                                 MOTIVO                           FUNCIONARIO  \n",
+       "14527         QUANTIDADE INFERIOR DA OS               ALEANDRA TRINDADE SOUSA  \n",
+       "14477         QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
+       "14365  MERCADORIA PROXIMO AO VENCIMENTO  CARLOS ALBERTO SANTOS DA SILVA FILHO  "
       ]
      },
      "metadata": {},
@@ -424,7 +396,7 @@
    ],
    "source": [
     "\n",
-    "comp = df_67.loc[df_67['COD'] == 471762]\n",
+    "comp = df_67.loc[df_67['COD'] == 464317]\n",
     "comp = comp[['DATA','HORAS', 'COD', 'DESCRIÇÃO', 'MOTIVO', 'FUNCIONARIO']].sort_values(by=['DATA','HORAS'], ascending= False)\n",
     "display(comp)\n",
     "display(df_retorno)\n"
