--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -1,9 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "70e71b22",
+   "metadata": {},
+   "source": [
+    "IMPORTAÇÃO DE MODULOS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "44118fba",
+   "execution_count": 73,
+   "id": "96e4f806",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from path_arquivos import *\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c82fc0f",
+   "metadata": {},
+   "source": [
+    "LEITURA DOS DATAFRAMES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "f038d8e0",
    "metadata": {},
    "outputs": [
     {
@@ -16,65 +43,58 @@
     }
    ],
    "source": [
-    "from path_arquivos import *\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import glob\n",
-    "import os\n",
-    "base = pd.read_excel(ar_xlsx.ar_96, usecols=['CODPROD', 'DESCRICAO'])"
+    "df_life = pd.read_excel(totvs.life, usecols=['CONFERENCIA','PRODUTO','VALIDADE','PROBLEMA'])\n",
+    "df_bonus = pd.read_excel(ar_xlsx.ar_64)\n",
+    "df_end = pd.read_csv(ar_csv.ar_end, header= None, names= col_name.cEnd)\n",
+    "df_str = pd.read_excel(ar_xlsx.ar_str, sheet_name= \"AE\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14a5a666",
+   "metadata": {},
+   "source": [
+    "CORPO DO SCRIPT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "4bccaed2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_life['COD'] = (df_life['PRODUTO'].str.split('-').str[0]).astype(int)\n",
+    "df_life[\"ID_LIFE\"] = df_life['CONFERENCIA'].astype(str) + \"-\" + df_life['COD'].astype(str) + \"-\" + df_life['VALIDADE'].astype(str)\n",
+    "\n",
+    "\n",
+    "df_prod = df_bonus[['NUMBONUS', 'CODPROD', 'DESCRICAO', 'CODENDERECO', 'DTVALIDADE']].copy()\n",
+    "df_prod[\"ID_LIFE\"] = df_prod['NUMBONUS'].astype(str) + \"-\" + df_prod['CODPROD'].astype(str) + \"-\" + df_prod['DTVALIDADE'].astype(str)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "623793b7",
+   "id": "b1bdcf94",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e8a2b7f",
+   "metadata": {},
    "source": [
-    "df = base.loc[base['RUA'].between(1,39)].copy()\n",
-    "dic_raname = {\n",
-    "    'ABASTECEPALETE' : 'FLEG_ABST',\n",
-    "    'CAPACIDADE' : 'CAP'\n",
-    "}\n",
-    "df = df.rename(columns=dic_raname)\n",
-    "concat = df['RUA'].astype(str) + \" - \" + df['PREDIO'].astype(str)\n",
-    "\n",
-    "df['extrator'] = df['EMBALAGEMMASTER'].str.extract(r'(\\d+)').astype(int)\n",
-    "df['volume_master'] = df['ALTURAARM'].astype(float) * df['LARGURAARM'].astype(float) * df['COMPRIMENTOARM'].astype(float) \n",
-    "df['volume_venda'] = (df['ALTURAM3'].astype(float) * df['LARGURAM3'].astype(float) * df['COMPRIMENTOM3'].astype(float)) * df['extrator']\n",
-    "df['CONT_AP'] = concat.map(concat.value_counts())\n",
-    "df['STATUS_PROD'] = np.where(df['CONT_AP'] > 3, \"DIV\", \n",
-    "    np.where(df['CONT_AP'] > 2,\"VAL\", \"INT\"))\n",
-    "\n",
-    "df[\"VAR_CAP\"] = np.where((df['CAP'] > df['QTTOTPAL']) & (df['STATUS_PROD'] != \"INT\"), \"DIVERGENCIA\", \"NORMAL\")\n",
-    "df['VAR_ABST'] =    np.where((df['FLEG_ABST'] == 'SIM') & (df['STATUS_PROD'] == \"INT\"), \"NORMAL\",\n",
-    "                    np.where((df['FLEG_ABST']== 'NÃO') & (df['STATUS_PROD'] == \"DIV\"), \"NORMAL\",\n",
-    "                    \"DIVERGENCIA\"))\n",
-    "\n",
-    "df['VAR_CUBAGEM'] = np.where(df['volume_master'] < df['volume_venda'], \"DIVERGENCIA\", \"NORMAL\")\n",
-    "\n",
-    "drop_col = ['PKESTRU', 'PK_END', 'CARACTERISTICA', 'PULMAO','TIPO_1', 'PRAZOVAL', 'PERCTOLERANCIAVAL', 'DTULTENT','USAWMS', 'REVENDA', 'TIPOPROD','CODFORNEC', 'FORNECEDOR', 'TIPO', 'PONTOREPOSICAO','CODAUXILIAR', 'EMBALAGEM', 'EMBALAGEMMASTER', 'QTUNITCX', 'CODSEC','SECAO', 'LASTROPAL', 'ALTURAPAL', 'QTTOTPAL', 'ALTURAM3', 'LARGURAM3','COMPRIMENTOM3', 'ALTURAARM', 'LARGURAARM', 'COMPRIMENTOARM','PESOBRUTOMASTER', 'PESOLIQMASTER', 'PESOBRUTO', 'PESOLIQ','OBS2', 'CODAUXILIAR2','volume_venda', 'volume_master','CODFILIAL']\n",
-    "df = df.drop(columns=drop_col)"
+    "VISUALIZAÇÃO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "bcd06b57",
+   "execution_count": 80,
+   "id": "7a8f9de6",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['CODFILIAL', 'CODPROD', 'DESCRICAO', 'CAP', 'FLEG_ABST', 'RUA',\n",
-       "       'PREDIO', 'NIVEL', 'APTO', 'extrator', 'CONT_AP', 'STATUS_PROD',\n",
-       "       'VAR_CAP', 'VAR_ABST', 'VAR_CUBAGEM'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -96,29 +116,199 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>VAR_CUBAGEM</th>\n",
-       "      <th>TT_PROD</th>\n",
+       "      <th>NUMBONUS</th>\n",
+       "      <th>CODPROD</th>\n",
+       "      <th>DESCRICAO</th>\n",
+       "      <th>CODENDERECO</th>\n",
+       "      <th>DTVALIDADE</th>\n",
+       "      <th>ID_LIFE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>DIVERGENCIA</td>\n",
-       "      <td>4320</td>\n",
+       "      <th>10715</th>\n",
+       "      <td>286240</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1000959</td>\n",
+       "      <td>2026-06-29</td>\n",
+       "      <td>286240 - 461727 - 2026-06-29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NORMAL</td>\n",
-       "      <td>5641</td>\n",
+       "      <th>10733</th>\n",
+       "      <td>286240</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001393</td>\n",
+       "      <td>2026-06-30</td>\n",
+       "      <td>286240 - 461727 - 2026-06-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10797</th>\n",
+       "      <td>286411</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001412</td>\n",
+       "      <td>2026-06-28</td>\n",
+       "      <td>286411 - 461727 - 2026-06-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10803</th>\n",
+       "      <td>286411</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001526</td>\n",
+       "      <td>2026-06-28</td>\n",
+       "      <td>286411 - 461727 - 2026-06-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10806</th>\n",
+       "      <td>286411</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001625</td>\n",
+       "      <td>2026-06-28</td>\n",
+       "      <td>286411 - 461727 - 2026-06-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10807</th>\n",
+       "      <td>286411</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001629</td>\n",
+       "      <td>2026-06-28</td>\n",
+       "      <td>286411 - 461727 - 2026-06-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10844</th>\n",
+       "      <td>286411</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001494</td>\n",
+       "      <td>2026-06-29</td>\n",
+       "      <td>286411 - 461727 - 2026-06-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10847</th>\n",
+       "      <td>286240</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001600</td>\n",
+       "      <td>2026-06-30</td>\n",
+       "      <td>286240 - 461727 - 2026-06-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10910</th>\n",
+       "      <td>286240</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001496</td>\n",
+       "      <td>2026-06-30</td>\n",
+       "      <td>286240 - 461727 - 2026-06-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10963</th>\n",
+       "      <td>286240</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001171</td>\n",
+       "      <td>2026-06-30</td>\n",
+       "      <td>286240 - 461727 - 2026-06-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10976</th>\n",
+       "      <td>286411</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001518</td>\n",
+       "      <td>2026-06-28</td>\n",
+       "      <td>286411 - 461727 - 2026-06-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10977</th>\n",
+       "      <td>286411</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001519</td>\n",
+       "      <td>2026-06-28</td>\n",
+       "      <td>286411 - 461727 - 2026-06-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11008</th>\n",
+       "      <td>286240</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001064</td>\n",
+       "      <td>2026-06-30</td>\n",
+       "      <td>286240 - 461727 - 2026-06-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11028</th>\n",
+       "      <td>286240</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001604</td>\n",
+       "      <td>2026-06-30</td>\n",
+       "      <td>286240 - 461727 - 2026-06-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11031</th>\n",
+       "      <td>286411</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001635</td>\n",
+       "      <td>2026-06-28</td>\n",
+       "      <td>286411 - 461727 - 2026-06-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11098</th>\n",
+       "      <td>286411</td>\n",
+       "      <td>461727</td>\n",
+       "      <td>BISC MARIL 350GR LEITE</td>\n",
+       "      <td>1001626</td>\n",
+       "      <td>2026-06-28</td>\n",
+       "      <td>286411 - 461727 - 2026-06-28</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   VAR_CUBAGEM  TT_PROD\n",
-       "0  DIVERGENCIA     4320\n",
-       "1       NORMAL     5641"
+       "       NUMBONUS  CODPROD               DESCRICAO  CODENDERECO DTVALIDADE  \\\n",
+       "10715    286240   461727  BISC MARIL 350GR LEITE      1000959 2026-06-29   \n",
+       "10733    286240   461727  BISC MARIL 350GR LEITE      1001393 2026-06-30   \n",
+       "10797    286411   461727  BISC MARIL 350GR LEITE      1001412 2026-06-28   \n",
+       "10803    286411   461727  BISC MARIL 350GR LEITE      1001526 2026-06-28   \n",
+       "10806    286411   461727  BISC MARIL 350GR LEITE      1001625 2026-06-28   \n",
+       "10807    286411   461727  BISC MARIL 350GR LEITE      1001629 2026-06-28   \n",
+       "10844    286411   461727  BISC MARIL 350GR LEITE      1001494 2026-06-29   \n",
+       "10847    286240   461727  BISC MARIL 350GR LEITE      1001600 2026-06-30   \n",
+       "10910    286240   461727  BISC MARIL 350GR LEITE      1001496 2026-06-30   \n",
+       "10963    286240   461727  BISC MARIL 350GR LEITE      1001171 2026-06-30   \n",
+       "10976    286411   461727  BISC MARIL 350GR LEITE      1001518 2026-06-28   \n",
+       "10977    286411   461727  BISC MARIL 350GR LEITE      1001519 2026-06-28   \n",
+       "11008    286240   461727  BISC MARIL 350GR LEITE      1001064 2026-06-30   \n",
+       "11028    286240   461727  BISC MARIL 350GR LEITE      1001604 2026-06-30   \n",
+       "11031    286411   461727  BISC MARIL 350GR LEITE      1001635 2026-06-28   \n",
+       "11098    286411   461727  BISC MARIL 350GR LEITE      1001626 2026-06-28   \n",
+       "\n",
+       "                            ID_LIFE  \n",
+       "10715  286240 - 461727 - 2026-06-29  \n",
+       "10733  286240 - 461727 - 2026-06-30  \n",
+       "10797  286411 - 461727 - 2026-06-28  \n",
+       "10803  286411 - 461727 - 2026-06-28  \n",
+       "10806  286411 - 461727 - 2026-06-28  \n",
+       "10807  286411 - 461727 - 2026-06-28  \n",
+       "10844  286411 - 461727 - 2026-06-29  \n",
+       "10847  286240 - 461727 - 2026-06-30  \n",
+       "10910  286240 - 461727 - 2026-06-30  \n",
+       "10963  286240 - 461727 - 2026-06-30  \n",
+       "10976  286411 - 461727 - 2026-06-28  \n",
+       "10977  286411 - 461727 - 2026-06-28  \n",
+       "11008  286240 - 461727 - 2026-06-30  \n",
+       "11028  286240 - 461727 - 2026-06-30  \n",
+       "11031  286411 - 461727 - 2026-06-28  \n",
+       "11098  286411 - 461727 - 2026-06-28  "
       ]
      },
      "metadata": {},
@@ -127,19 +317,13 @@
    ],
    "source": [
     "\n",
-    "var_cap = df.groupby(\"VAR_CAP\").agg(\n",
-    "            TT_PROD = ('CODPROD', 'nunique')\n",
-    "        ).reset_index()\n",
+    "# display(df_life.columns)\n",
+    "# display(df_life.head())\n",
+    "# display(df_life.dtypes)\n",
     "\n",
-    "var_abst = df.groupby(\"VAR_ABST\").agg(\n",
-    "            TT_PROD = ('CODPROD', 'nunique')\n",
-    "        ).reset_index()\n",
-    "\n",
-    "var_cubagem = df.groupby(\"VAR_CUBAGEM\").agg(\n",
-    "            TT_PROD = ('CODPROD', 'nunique')\n",
-    "        ).reset_index()\n",
-    "display(df.columns)\n",
-    "display(var_cubagem)\n"
+    "# procv = df_life.loc[df_life['COD'] == 461727]\n",
+    "procv = df_prod.loc[df_prod['CODPROD'] == 461727]\n",
+    "display(procv)\n"
    ]
   }
  ],
