criação do totvs_life e manutenção do extrator_corte

--- a/OUTROS/pesquisa.ipynb
+++ b/OUTROS/pesquisa.ipynb
@@ -10,13 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "id": "96e4f806",
    "metadata": {},
    "outputs": [],
    "source": [
     "from path_arquivos import *\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "caminho = r'c:\\WS_OLIVEIRA\\OUTPUT\\analitico_baixa.xlsx'\n"
    ]
   },
   {
@@ -29,24 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "id": "f038d8e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\WS_OLIVEIRA\\SCRIPTS\\.venv\\Lib\\site-packages\\openpyxl\\styles\\stylesheet.py:237: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
-      "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_life = pd.read_excel(totvs.life, usecols=['CONFERENCIA','PRODUTO','VALIDADE','PROBLEMA'])\n",
-    "df_bonus = pd.read_excel(ar_xlsx.ar_64)\n",
-    "df_end = pd.read_csv(ar_csv.ar_end, header= None, names= col_name.cEnd)\n",
-    "df_str = pd.read_excel(ar_xlsx.ar_str, sheet_name= \"AE\")"
+    "df = pd.read_excel(caminho, sheet_name= 'FIM_MESA')"
    ]
   },
   {
@@ -59,27 +49,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "4bccaed2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_life['COD'] = (df_life['PRODUTO'].str.split('-').str[0]).astype(int)\n",
-    "df_life[\"ID_LIFE\"] = df_life['CONFERENCIA'].astype(str) + \"-\" + df_life['COD'].astype(str) + \"-\" + df_life['VALIDADE'].astype(str)\n",
-    "\n",
-    "\n",
-    "df_prod = df_bonus[['NUMBONUS', 'CODPROD', 'DESCRICAO', 'CODENDERECO', 'DTVALIDADE']].copy()\n",
-    "df_prod[\"ID_LIFE\"] = df_prod['NUMBONUS'].astype(str) + \"-\" + df_prod['CODPROD'].astype(str) + \"-\" + df_prod['DTVALIDADE'].astype(str)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "b1bdcf94",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista_fim = [47335286, 47336582, 47336594, 47341637, 47336912,47336817, 47336819,47341629, 47337359, 47344447]\n",
+    "lista_pd = []\n",
+    "fim = df.loc[df['NUMOS'].isin(lista)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,239 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "7a8f9de6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NUMBONUS</th>\n",
-       "      <th>CODPROD</th>\n",
-       "      <th>DESCRICAO</th>\n",
-       "      <th>CODENDERECO</th>\n",
-       "      <th>DTVALIDADE</th>\n",
-       "      <th>ID_LIFE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>10715</th>\n",
-       "      <td>286240</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1000959</td>\n",
-       "      <td>2026-06-29</td>\n",
-       "      <td>286240 - 461727 - 2026-06-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10733</th>\n",
-       "      <td>286240</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001393</td>\n",
-       "      <td>2026-06-30</td>\n",
-       "      <td>286240 - 461727 - 2026-06-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10797</th>\n",
-       "      <td>286411</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001412</td>\n",
-       "      <td>2026-06-28</td>\n",
-       "      <td>286411 - 461727 - 2026-06-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10803</th>\n",
-       "      <td>286411</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001526</td>\n",
-       "      <td>2026-06-28</td>\n",
-       "      <td>286411 - 461727 - 2026-06-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10806</th>\n",
-       "      <td>286411</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001625</td>\n",
-       "      <td>2026-06-28</td>\n",
-       "      <td>286411 - 461727 - 2026-06-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10807</th>\n",
-       "      <td>286411</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001629</td>\n",
-       "      <td>2026-06-28</td>\n",
-       "      <td>286411 - 461727 - 2026-06-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10844</th>\n",
-       "      <td>286411</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001494</td>\n",
-       "      <td>2026-06-29</td>\n",
-       "      <td>286411 - 461727 - 2026-06-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10847</th>\n",
-       "      <td>286240</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001600</td>\n",
-       "      <td>2026-06-30</td>\n",
-       "      <td>286240 - 461727 - 2026-06-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10910</th>\n",
-       "      <td>286240</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001496</td>\n",
-       "      <td>2026-06-30</td>\n",
-       "      <td>286240 - 461727 - 2026-06-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10963</th>\n",
-       "      <td>286240</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001171</td>\n",
-       "      <td>2026-06-30</td>\n",
-       "      <td>286240 - 461727 - 2026-06-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10976</th>\n",
-       "      <td>286411</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001518</td>\n",
-       "      <td>2026-06-28</td>\n",
-       "      <td>286411 - 461727 - 2026-06-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10977</th>\n",
-       "      <td>286411</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001519</td>\n",
-       "      <td>2026-06-28</td>\n",
-       "      <td>286411 - 461727 - 2026-06-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11008</th>\n",
-       "      <td>286240</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001064</td>\n",
-       "      <td>2026-06-30</td>\n",
-       "      <td>286240 - 461727 - 2026-06-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11028</th>\n",
-       "      <td>286240</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001604</td>\n",
-       "      <td>2026-06-30</td>\n",
-       "      <td>286240 - 461727 - 2026-06-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11031</th>\n",
-       "      <td>286411</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001635</td>\n",
-       "      <td>2026-06-28</td>\n",
-       "      <td>286411 - 461727 - 2026-06-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11098</th>\n",
-       "      <td>286411</td>\n",
-       "      <td>461727</td>\n",
-       "      <td>BISC MARIL 350GR LEITE</td>\n",
-       "      <td>1001626</td>\n",
-       "      <td>2026-06-28</td>\n",
-       "      <td>286411 - 461727 - 2026-06-28</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       NUMBONUS  CODPROD               DESCRICAO  CODENDERECO DTVALIDADE  \\\n",
-       "10715    286240   461727  BISC MARIL 350GR LEITE      1000959 2026-06-29   \n",
-       "10733    286240   461727  BISC MARIL 350GR LEITE      1001393 2026-06-30   \n",
-       "10797    286411   461727  BISC MARIL 350GR LEITE      1001412 2026-06-28   \n",
-       "10803    286411   461727  BISC MARIL 350GR LEITE      1001526 2026-06-28   \n",
-       "10806    286411   461727  BISC MARIL 350GR LEITE      1001625 2026-06-28   \n",
-       "10807    286411   461727  BISC MARIL 350GR LEITE      1001629 2026-06-28   \n",
-       "10844    286411   461727  BISC MARIL 350GR LEITE      1001494 2026-06-29   \n",
-       "10847    286240   461727  BISC MARIL 350GR LEITE      1001600 2026-06-30   \n",
-       "10910    286240   461727  BISC MARIL 350GR LEITE      1001496 2026-06-30   \n",
-       "10963    286240   461727  BISC MARIL 350GR LEITE      1001171 2026-06-30   \n",
-       "10976    286411   461727  BISC MARIL 350GR LEITE      1001518 2026-06-28   \n",
-       "10977    286411   461727  BISC MARIL 350GR LEITE      1001519 2026-06-28   \n",
-       "11008    286240   461727  BISC MARIL 350GR LEITE      1001064 2026-06-30   \n",
-       "11028    286240   461727  BISC MARIL 350GR LEITE      1001604 2026-06-30   \n",
-       "11031    286411   461727  BISC MARIL 350GR LEITE      1001635 2026-06-28   \n",
-       "11098    286411   461727  BISC MARIL 350GR LEITE      1001626 2026-06-28   \n",
-       "\n",
-       "                            ID_LIFE  \n",
-       "10715  286240 - 461727 - 2026-06-29  \n",
-       "10733  286240 - 461727 - 2026-06-30  \n",
-       "10797  286411 - 461727 - 2026-06-28  \n",
-       "10803  286411 - 461727 - 2026-06-28  \n",
-       "10806  286411 - 461727 - 2026-06-28  \n",
-       "10807  286411 - 461727 - 2026-06-28  \n",
-       "10844  286411 - 461727 - 2026-06-29  \n",
-       "10847  286240 - 461727 - 2026-06-30  \n",
-       "10910  286240 - 461727 - 2026-06-30  \n",
-       "10963  286240 - 461727 - 2026-06-30  \n",
-       "10976  286411 - 461727 - 2026-06-28  \n",
-       "10977  286411 - 461727 - 2026-06-28  \n",
-       "11008  286240 - 461727 - 2026-06-30  \n",
-       "11028  286240 - 461727 - 2026-06-30  \n",
-       "11031  286411 - 461727 - 2026-06-28  \n",
-       "11098  286411 - 461727 - 2026-06-28  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "# display(df_life.columns)\n",
-    "# display(df_life.head())\n",
-    "# display(df_life.dtypes)\n",
-    "\n",
-    "# procv = df_life.loc[df_life['COD'] == 461727]\n",
-    "procv = df_prod.loc[df_prod['CODPROD'] == 461727]\n",
-    "display(procv)\n"
+    "fim.to_excel(output.jupyter, index=False, sheet_name= \"FIM_MESA\")"
    ]
   }
  ],
