--- a/OUTROS/consulta_corte.ipynb
+++ b/OUTROS/consulta_corte.ipynb
@@ -2,47 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "id": "1cdb63ad",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['DATA', 'CARR.', 'COD', 'DESCRIÇÃO', 'PEDIDO', 'QTDE ORIG', 'VL. ORIG',\n",
-       "       'RUA', 'PREDIO', 'APTO', 'ESTOQUE', 'QTDE CORTE', 'VL CORTE', 'HORA',\n",
-       "       'MIN', 'MOTIVO', 'COD FUNC', 'FUNCIONARIO', 'CONCAT', 'COUNT', 'IF',\n",
-       "       'MÊS', 'TURNO'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Código', 'Descrição ', 'Estoque', 'Qtde Pedida',\n",
-       "       'Bloqueado(Qt.Bloq.-Qt.Avaria)', 'Qt.Avaria', 'Reservado',\n",
-       "       'Disponível'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from path_arquivos import *\n",
     "import pandas as pd\n",
     "caminho = output.var_corte\n",
+    "df_corte = pd.read_csv(ar_csv.ar_67,header= None, names= col_name.c67)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "b45cf64d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ajuste_col(df_original, col):\n",
+    "    df_copia = df_original.copy() \n",
+    "    for i in col:\n",
+    "        df_copia[i] = df_copia[i].fillna(0).astype(str)\n",
+    "        df_copia[i] = df_copia[i].str.replace(\".\", \"\", regex=False)\n",
+    "        df_copia[i] = df_copia[i].str.replace(\",\", \".\")\n",
+    "        df_copia[i] = df_copia[i].fillna(0).astype(float)\n",
+    "    return df_copia\n",
     "\n",
-    "df_67 = pd.read_excel(caminho, sheet_name= 'CORTE 2025')\n",
-    "df_retorno = pd.read_excel(caminho, sheet_name= \"RETORNO\")\n",
-    "df_86 = pd.read_excel(ar_xls.ar_86, usecols= ['Código', 'Descrição ', 'Estoque', 'Qtde Pedida', 'Bloqueado(Qt.Bloq.-Qt.Avaria)', 'Qt.Avaria', 'Reservado', 'Disponível'])\n",
+    "def correcao(df, dt):\n",
+    "    var = df.copy()\n",
     "\n",
-    "display(df_67.columns)\n",
-    "display(df_86.columns)"
+    "    var['dia'] = var[dt].dt.day_name('pt_BR')\n",
+    "    var['mes'] = var[dt].dt.month_name('pt_BR')\n",
+    "    var['ano'] = var[dt].dt.year\n",
+    "    var[dt] = var[dt].dt.strftime(\"%d-%m-%Y\")     \n",
+    "    var['vl_corte'] = var['vl_corte'].round(2).astype(str).str.replace('.', ',', regex= False)\n",
+    "    var = var.sort_values(by=dt, ascending= True, axis= 0)\n",
+    "    return var"
    ]
   },
   {
@@ -55,165 +51,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "id": "8c1640ae",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>COD</th>\n",
-       "      <th>QTDE_DIAS</th>\n",
-       "      <th>TOTAL_CORTE</th>\n",
-       "      <th>QTDE_CORTE</th>\n",
-       "      <th>Descrição</th>\n",
-       "      <th>Estoque</th>\n",
-       "      <th>BLOQUEADO</th>\n",
-       "      <th>var</th>\n",
-       "      <th>DATA</th>\n",
-       "      <th>RETURN</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>465097</td>\n",
-       "      <td>5</td>\n",
-       "      <td>704.67</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>BOLINHO BAUDUCCO 40GR CHOC/BAUNILHA</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>444365</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1875.62</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>SUCO NUTRINECTAR PRONTO 200ML UVA</td>\n",
-       "      <td>2912.0</td>\n",
-       "      <td>1551.0</td>\n",
-       "      <td>-1361.0</td>\n",
-       "      <td>2025-09-09</td>\n",
-       "      <td>Produto na camara-fria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>464141</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5224.50</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>CREME LEITE TIROL 200GR</td>\n",
-       "      <td>205.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>-193.0</td>\n",
-       "      <td>2025-09-10</td>\n",
-       "      <td>validade filial</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>471762</td>\n",
-       "      <td>3</td>\n",
-       "      <td>729.22</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>SUCO NUTRINECTAR PRONTO 200ML MARACUJA</td>\n",
-       "      <td>1614.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1613.0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>464317</td>\n",
-       "      <td>3</td>\n",
-       "      <td>231.34</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>MUCILON 360GR SACHET ARROZ</td>\n",
-       "      <td>1133.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1133.0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      COD  QTDE_DIAS  TOTAL_CORTE  QTDE_CORTE  \\\n",
-       "0  465097          5       704.67        29.0   \n",
-       "1  444365          4      1875.62        53.0   \n",
-       "2  464141          3      5224.50        90.0   \n",
-       "3  471762          3       729.22        22.0   \n",
-       "4  464317          3       231.34         3.0   \n",
-       "\n",
-       "                               Descrição   Estoque  BLOQUEADO     var  \\\n",
-       "0     BOLINHO BAUDUCCO 40GR CHOC/BAUNILHA     20.0       15.0    -5.0   \n",
-       "1       SUCO NUTRINECTAR PRONTO 200ML UVA   2912.0     1551.0 -1361.0   \n",
-       "2                 CREME LEITE TIROL 200GR    205.0       12.0  -193.0   \n",
-       "3  SUCO NUTRINECTAR PRONTO 200ML MARACUJA   1614.0        1.0 -1613.0   \n",
-       "4              MUCILON 360GR SACHET ARROZ   1133.0        0.0 -1133.0   \n",
-       "\n",
-       "        DATA                   RETURN  \n",
-       "0        NaT                           \n",
-       "1 2025-09-09  Produto na camara-fria   \n",
-       "2 2025-09-10          validade filial  \n",
-       "3        NaT                           \n",
-       "4        NaT                           "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_67 = df_67.loc[df_67['MÊS'] == 'setembro']\n",
-    "df_67['HORAS'] = pd.to_datetime(df_67['HORA'].astype(str) + \":\" + df_67['MIN'].astype(str), format='%H:%M').dt.time\n",
+    "df_corte['hora'] = df_corte['hr'].astype(str) + ':' + df_corte['min'].astype(str)\n",
+    "df_corte['data'] = pd.to_datetime(df_corte['data'], format= '%d/%m/%y').sort_index(axis= 0, ascending= True)\n",
+    "df_corte['hora'] = pd.to_datetime(df_corte['hora'], format= '%H:%M').dt.strftime('%H:%M')\n",
     "\n",
-    "var_corte = df_67.groupby('COD').agg(\n",
-    "    QTDE_DIAS = ('DATA', 'nunique'),\n",
-    "    TOTAL_CORTE = ('VL CORTE', 'sum'),\n",
-    "    QTDE_CORTE = ('QTDE CORTE', 'sum')\n",
-    ").reset_index().sort_values(by=['QTDE_DIAS', 'QTDE_CORTE'], ascending= False)\n",
-    "df_86['BLOQUEADO'] = df_86['Bloqueado(Qt.Bloq.-Qt.Avaria)'].fillna(0).astype(int) + df_86['Qt.Avaria'].fillna(0).astype(int)\n",
-    "var_86 = df_86[['Código', 'Descrição ', 'Estoque', 'BLOQUEADO']].copy()\n",
-    "df = var_corte.merge(var_86, left_on= 'COD', right_on= 'Código', how= 'left').drop(columns='Código')\n",
-    "df['var'] = df['BLOQUEADO'] - df['Estoque']\n",
-    "\n",
-    "validar = df.loc[(df['var'] < 0) & (df['QTDE_DIAS'] > 2)]\n",
-    "validar = validar.merge(df_retorno, left_on= 'COD', right_on= 'CODPROD', how= \"left\").drop(columns='CODPROD')\n",
-    "validar[['RETURN', 'DATA']] = validar[['RETURN','DATA']].fillna(\"\")\n",
-    "\n",
-    "display(validar)"
+    "col_ajustar = ['vl_corte', 'qtde_corte']\n",
+    "df_corte = ajuste_col(df_corte, col_ajustar)\n",
+    "df_corte = df_corte.sort_values(by=\"data\", ascending= True, axis= 0)\n",
+    "df_dia = df_corte.loc[df_corte['hora'].between(\"07:30:00\", \"18:00:00\")].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "94e22145",
+   "execution_count": null,
+   "id": "dd6a09fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "DIVERGENCIA:\n",
+      "    data_turno  ped_imperfeito           dia      mes   ano\n",
+      "0  09-10-2025              23  Quinta-feira  Outubro  2025\n",
+      "1  10-10-2025              70   Sexta-feira  Outubro  2025\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_div = df_corte[['data','desc','hora', 'n_ped']].copy()\n",
+    "df_div['data'] = pd.to_datetime(df_div['data'], format= '%d/%m/%Y')\n",
+    "df_div[\"data_turno\"] = df_div['data'].copy()\n",
+    "df_div.loc[df_div['hora'] < \"07:30:00\", 'data_turno'] -= pd.Timedelta(days=1)\n",
+    "var_div = df_div.groupby('data_turno').agg(\n",
+    "    ped_imperfeito=('n_ped', 'nunique')\n",
+    ").reset_index()\n",
+    "var_div['dia'] = var_div['data_turno'].dt.day_name('pt_BR')\n",
+    "var_div['mes'] = var_div['data_turno'].dt.month_name('pt_BR')\n",
+    "var_div['ano'] = var_div['data_turno'].dt.year\n",
+    "var_div['data_turno'] = var_div['data_turno'].dt.strftime(\"%d-%m-%Y\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d99a5777",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "a4e4c703",
    "metadata": {},
    "outputs": [
     {
@@ -237,157 +133,38 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>DATA</th>\n",
-       "      <th>HORAS</th>\n",
-       "      <th>COD</th>\n",
-       "      <th>DESCRIÇÃO</th>\n",
-       "      <th>MOTIVO</th>\n",
-       "      <th>FUNCIONARIO</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>14527</th>\n",
-       "      <td>2025-09-19</td>\n",
-       "      <td>04:49:00</td>\n",
-       "      <td>464317</td>\n",
-       "      <td>MUCILON 360GR SACHET ARROZ</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>ALEANDRA TRINDADE SOUSA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14477</th>\n",
-       "      <td>2025-09-18</td>\n",
-       "      <td>15:33:00</td>\n",
-       "      <td>464317</td>\n",
-       "      <td>MUCILON 360GR SACHET ARROZ</td>\n",
-       "      <td>QUANTIDADE INFERIOR DA OS</td>\n",
-       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14365</th>\n",
-       "      <td>2025-09-15</td>\n",
-       "      <td>15:27:00</td>\n",
-       "      <td>464317</td>\n",
-       "      <td>MUCILON 360GR SACHET ARROZ</td>\n",
-       "      <td>MERCADORIA PROXIMO AO VENCIMENTO</td>\n",
-       "      <td>CARLOS ALBERTO SANTOS DA SILVA FILHO</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            DATA     HORAS     COD                   DESCRIÇÃO  \\\n",
-       "14527 2025-09-19  04:49:00  464317  MUCILON 360GR SACHET ARROZ   \n",
-       "14477 2025-09-18  15:33:00  464317  MUCILON 360GR SACHET ARROZ   \n",
-       "14365 2025-09-15  15:27:00  464317  MUCILON 360GR SACHET ARROZ   \n",
-       "\n",
-       "                                 MOTIVO                           FUNCIONARIO  \n",
-       "14527         QUANTIDADE INFERIOR DA OS               ALEANDRA TRINDADE SOUSA  \n",
-       "14477         QUANTIDADE INFERIOR DA OS  CARLOS ALBERTO SANTOS DA SILVA FILHO  \n",
-       "14365  MERCADORIA PROXIMO AO VENCIMENTO  CARLOS ALBERTO SANTOS DA SILVA FILHO  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DATA</th>\n",
-       "      <th>CODPROD</th>\n",
-       "      <th>RETURN</th>\n",
+       "      <th>data_turno</th>\n",
+       "      <th>ped_imperfeito</th>\n",
+       "      <th>dia</th>\n",
+       "      <th>mes</th>\n",
+       "      <th>ano</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2025-09-09</td>\n",
-       "      <td>280000</td>\n",
-       "      <td>inversão, liberado pelo comprador</td>\n",
+       "      <td>09-10-2025</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Quinta-feira</td>\n",
+       "      <td>Outubro</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2025-09-09</td>\n",
-       "      <td>444365</td>\n",
-       "      <td>Produto na camara-fria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2025-09-10</td>\n",
-       "      <td>464141</td>\n",
-       "      <td>validade filial</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2025-09-09</td>\n",
-       "      <td>468973</td>\n",
-       "      <td>3 caixa e 13 unidade no AP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2025-09-09</td>\n",
-       "      <td>470878</td>\n",
-       "      <td>ultima entrada 08/09/2025</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2025-09-10</td>\n",
-       "      <td>450655</td>\n",
-       "      <td>ultima entrada 03/09/2025</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2025-09-10</td>\n",
-       "      <td>428511</td>\n",
-       "      <td>ultima entrada 03/09/2025</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2025-09-10</td>\n",
-       "      <td>448268</td>\n",
-       "      <td>2 unidade no AP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2025-09-10</td>\n",
-       "      <td>474139</td>\n",
-       "      <td>5 unidade no AP</td>\n",
+       "      <td>10-10-2025</td>\n",
+       "      <td>70</td>\n",
+       "      <td>Sexta-feira</td>\n",
+       "      <td>Outubro</td>\n",
+       "      <td>2025</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        DATA  CODPROD                             RETURN\n",
-       "0 2025-09-09   280000  inversão, liberado pelo comprador\n",
-       "1 2025-09-09   444365            Produto na camara-fria \n",
-       "2 2025-09-10   464141                    validade filial\n",
-       "3 2025-09-09   468973         3 caixa e 13 unidade no AP\n",
-       "4 2025-09-09   470878          ultima entrada 08/09/2025\n",
-       "5 2025-09-10   450655          ultima entrada 03/09/2025\n",
-       "6 2025-09-10   428511          ultima entrada 03/09/2025\n",
-       "7 2025-09-10   448268                    2 unidade no AP\n",
-       "8 2025-09-10   474139                    5 unidade no AP"
+       "   data_turno  ped_imperfeito           dia      mes   ano\n",
+       "0  09-10-2025              23  Quinta-feira  Outubro  2025\n",
+       "1  10-10-2025              70   Sexta-feira  Outubro  2025"
       ]
      },
      "metadata": {},
@@ -395,11 +172,8 @@
     }
    ],
    "source": [
-    "\n",
-    "comp = df_67.loc[df_67['COD'] == 464317]\n",
-    "comp = comp[['DATA','HORAS', 'COD', 'DESCRIÇÃO', 'MOTIVO', 'FUNCIONARIO']].sort_values(by=['DATA','HORAS'], ascending= False)\n",
-    "display(comp)\n",
-    "display(df_retorno)\n"
+    "# display(df_dia.head())\n",
+    "display(var_div.head())"
    ]
   }
  ],
@@ -419,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.8"
   }
  },
  "nbformat": 4,
